--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@tanstack/react-form": "^1.19.3",
+    "@tanstack/react-query": "^5.87.1",
+    "@wk93/socommerce-sdk": "^1.4.6",
+    "clsx": "^2.1.1",
+    "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
