--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "swiper": "^12.0.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
